--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,132 +1,94 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-  version="4.0">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+    http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+    version="4.0">
 
-  <filter>
-	  <filter-name>UserCheckFilter</filter-name>
-	  <filter-class>UserCheckFilter</filter-class>
-	  </filter>
-	  <filter-mapping>
-		  <filter-name>UserCheckFilter</filter-name>
-		  <url-pattern>/tategaki.jsp</url-pattern>
-  </filter-mapping>
-		<servlet>
-			<servlet-name>ReadFile</servlet-name>
-			<servlet-class>ReadFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>ReadJsonFile</servlet-name>
-			<servlet-class>ReadJsonFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>WriteFile</servlet-name>
-			<servlet-class>WriteFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>WriteJsonFile</servlet-name>
-			<servlet-class>WriteJsonFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>FileListMaker</servlet-name>
-			<servlet-class>FileListMaker</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>KanjiProxy</servlet-name>
-			<servlet-class>KanjiProxy</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>FileMaker</servlet-name>
-			<servlet-class>FileMaker</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>DeleteFile</servlet-name>
-			<servlet-class>DeleteFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>Login</servlet-name>
-			<servlet-class>Login</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>Register</servlet-name>
-			<servlet-class>Register</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>Logout</servlet-name>
-			<servlet-class>Logout</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>MoveFile</servlet-name>
-			<servlet-class>MoveFile</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>DirectoryMaker</servlet-name>
-			<servlet-class>DirectoryMaker</servlet-class>
-		</servlet>
-		<servlet>
-			<servlet-name>DeleteDirectory</servlet-name>
-			<servlet-class>DeleteDirectory</servlet-class>
-		</servlet>
+    <context-param>
+        <param-name>database-name</param-name>
+        <param-value>tategaki_editor</param-value>
+    </context-param>
+    <context-param>
+        <param-name>database-user</param-name>
+        <param-value>sampleuser</param-value>
+    </context-param>
+    <context-param>
+        <param-name>database-password</param-name>
+        <param-value>digk473</param-value>
+    </context-param>
+
+    <filter>
+        <filter-name>UserCheckFilter</filter-name>
+        <filter-class>filter.UserCheckFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>UserCheckFilter</filter-name>
+        <url-pattern>/tategaki.jsp</url-pattern>
+    </filter-mapping>
 
 
-		<servlet-mapping>
-			<servlet-name>ReadFile</servlet-name>
-			<url-pattern>/ReadFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>ReadJsonFile</servlet-name>
-			<url-pattern>/ReadJsonFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>WriteFile</servlet-name>
-			<url-pattern>/WriteFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>WriteJsonFile</servlet-name>
-			<url-pattern>/WriteJsonFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>FileListMaker</servlet-name>
-			<url-pattern>/FileListMaker</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>KanjiProxy</servlet-name>
-			<url-pattern>/KanjiProxy</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>FileMaker</servlet-name>
-			<url-pattern>/FileMaker</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>DeleteFile</servlet-name>
-			<url-pattern>/DeleteFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>Login</servlet-name>
-			<url-pattern>/Login</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>Register</servlet-name>
-			<url-pattern>/Register</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>Logout</servlet-name>
-			<url-pattern>/Logout</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>MoveFile</servlet-name>
-			<url-pattern>/MoveFile</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>DirectoryMaker</servlet-name>
-			<url-pattern>/DirectoryMaker</url-pattern>
-		</servlet-mapping>
-		<servlet-mapping>
-			<servlet-name>DeleteDirectory</servlet-name>
-			<url-pattern>/DeleteDirectory</url-pattern>
-		</servlet-mapping>
+    <servlet>
+        <servlet-name>FileData</servlet-name>
+        <servlet-class>servlet.FileDataServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>FileData</servlet-name>
+    <url-pattern>/FileData</url-pattern>
+    </servlet-mapping>
 
+    <servlet>
+        <servlet-name>FileList</servlet-name>
+        <servlet-class>servlet.FileListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>FileList</servlet-name>
+    <url-pattern>/FileList</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>servlet.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Register</servlet-name>
+        <servlet-class>servlet.Register</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/Register</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>servlet.Logout</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/Logout</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Delete</servlet-name>
+        <servlet-class>servlet.DeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>Delete</servlet-name>
+    <url-pattern>/Delete</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Convert</servlet-name>
+        <servlet-class>servlet.JapaneseConvertServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>Convert</servlet-name>
+    <url-pattern>/Convert</url-pattern>
+    </servlet-mapping>
 
 </web-app>
