esdocの出力をリアルタイムで表示するよう変更。コマンド実行前にesdocの出力ディレクトリを空にするよう変更。jsのクラス構成の変更などがあれば古いクラスの情報が消えずに残ってしまうことがあるため

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,18 @@ tomcat {
 
 task esdoc << {
     // 前処理
+
+    // esdocディレクトリを空にする
+    def docDir = file 'esdoc'
+    docDir.eachFile { file ->
+        if (file.isFile()) {
+            file.delete()
+            } else {
+                file.deleteDir()
+            }
+        }
+
+
     // classやesdocに載せる変数(UtilやKeyTable)前にexportキーワードを付加する
     FileCollection jsFiles = fileTree('src/main/webapp/js') {
         include '**/*.js'
@@ -66,19 +78,17 @@ task esdoc << {
                 line ==~ pattern ? 'export ' + line : line
                 }
 
-                file.text = newLines.join('\n')
+            file.text = newLines.join '\n'
             }
     }
 
 esdoc << {
     // esdocコマンドの実行
     def cmd = "esdoc -c ${projectDir}/esdoc.json"
-    def workingDir = file('.')
+    def workingDir = file '.'
 
-    println "run esdoc"
-    def proc = cmd.execute(null, workingDir)
-    proc.waitFor()
-    println proc.text
+    def proc = cmd.execute null, workingDir
+    proc.waitForProcessOutput System.out, System.out
     }
 
 esdoc << {
@@ -89,18 +99,18 @@ esdoc << {
         exclude 'test/'
         }
 
-        def pattern = /export\s/
-        jsFiles.findAll { it.isFile() }.each { file ->
-            def newLines = file.readLines().collect { line ->
-                line.replaceAll(pattern, '')
-                }
+    def pattern = /export\s/
+    jsFiles.findAll { it.isFile() }.each { file ->
+        def newLines = file.readLines().collect { line ->
+            line.replaceAll pattern, ''
+            }
 
-            // 最終行は空行にする(git diffで出てくる'\No newline at end of file'への対策)
-            def lastLine = newLines.last()
-            if (lastLine != '') {
-                    newLines.push('')
-                }
+        // 最終行は空行にする(git diffで出てくる'\No newline at end of file'への対策)
+        def lastLine = newLines.last()
+        if (lastLine != '') {
+                newLines.push ''
+            }
 
-            file.text = newLines.join('\n')
+        file.text = newLines.join '\n'
         }
     }
