--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-    http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-    version="4.0">
-
+<?xml version="1.0" encoding="UTF-8"?><web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee         http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
     <context-param>
         <param-name>database-name</param-name>
         <param-value>tategaki_editor</param-value>
@@ -18,11 +12,10 @@
         <param-value>digk473</param-value>
     </context-param>
     <context-param>
+        <!--自動生成-->
         <param-name>project-root</param-name>
-        <!-- TODO: gradleで自動生成されるように変更 -->
         <param-value>/home/black-ubuntu/web/tategaki-editor</param-value>
     </context-param>
-
     <filter>
         <filter-name>UserCheckFilter</filter-name>
         <filter-class>filter.UserCheckFilter</filter-class>
@@ -31,78 +24,68 @@
         <filter-name>UserCheckFilter</filter-name>
         <url-pattern>/index.jsp</url-pattern>
     </filter-mapping>
-
-
     <servlet>
         <servlet-name>FileData</servlet-name>
         <servlet-class>servlet.FileDataServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>FileData</servlet-name>
-    <url-pattern>/FileData</url-pattern>
+        <servlet-name>FileData</servlet-name>
+        <url-pattern>/FileData</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>FileList</servlet-name>
         <servlet-class>servlet.FileListServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>FileList</servlet-name>
-    <url-pattern>/FileList</url-pattern>
+        <servlet-name>FileList</servlet-name>
+        <url-pattern>/FileList</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Login</servlet-name>
         <servlet-class>servlet.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Login</servlet-name>
-    <url-pattern>/Login</url-pattern>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Register</servlet-name>
         <servlet-class>servlet.Register</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Register</servlet-name>
-    <url-pattern>/Register</url-pattern>
+        <servlet-name>Register</servlet-name>
+        <url-pattern>/Register</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Logout</servlet-name>
         <servlet-class>servlet.Logout</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Logout</servlet-name>
-    <url-pattern>/Logout</url-pattern>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/Logout</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Delete</servlet-name>
         <servlet-class>servlet.DeleteServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Delete</servlet-name>
-    <url-pattern>/Delete</url-pattern>
+        <servlet-name>Delete</servlet-name>
+        <url-pattern>/Delete</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Withdraw</servlet-name>
         <servlet-class>servlet.WithdrawServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Withdraw</servlet-name>
-    <url-pattern>/Withdraw</url-pattern>
+        <servlet-name>Withdraw</servlet-name>
+        <url-pattern>/Withdraw</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>Convert</servlet-name>
         <servlet-class>servlet.JapaneseConvertServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>Convert</servlet-name>
-    <url-pattern>/Convert</url-pattern>
+        <servlet-name>Convert</servlet-name>
+        <url-pattern>/Convert</url-pattern>
     </servlet-mapping>
-
 </web-app>
