--- a/build.gradle
+++ b/build.gradle
@@ -53,35 +53,42 @@ tomcat {
             }
     }
 
-task addInitParamProjectRootToWebxml << {
+task addInitParamToWebXml << {
     def rootNode = new XmlSlurper(false, false).parse tomcat.jasper.webXmlFragment
-    def contextParams = rootNode.children().findAll { it.name() == 'context-param' }
-    def projectRoot = contextParams.findAll { it.'param-name'.text() == 'project-root' }
-    def newNode = {
-                'context-param' {
-                    mkp.comment '自動生成'
-                    'param-name'("project-root")
-                    'param-value'("${projectDir}")
-                }
+    File initFile = file('init.properties')
+    Properties property = new Properties();
+    new FileInputStream(initFile).withCloseable {
+            property.load(it)
         }
-    if (projectRoot.size() == 0) {
-        println 'no project-root name of param-name in context-param'
-            rootNode.appendNode newNode
-    } else if (projectRoot.'param-value'.text() == '') {
-        println 'project-root exist, but no param-value including empty'
-        projectRoot.replaceNode newNode
-    } else {
-        println 'exist project-root'
-        return
-    }
 
-    println 'copy xml'
+    for (paramName in ['database-name', 'database-user', 'database-password']) {
+        addInitParam(rootNode, paramName, property.getProperty(paramName))
+        }
+    addInitParam(rootNode, 'project-root', projectDir)
+
     // 通常ではインデントの深さが２なので４にする
     def xmlString = groovy.xml.XmlUtil.serialize(rootNode).replaceAll(/  /, '    ')
     file(tomcat.jasper.webXmlFragment).text =  xmlString
     }
 
-tomcatRunWar.dependsOn addInitParamProjectRootToWebxml
+def addInitParam(rootNode, paramName, paramValue) {
+    def contextParams = rootNode.children().findAll { it.name() == 'context-param' }
+    def param = contextParams.find { it.'param-name'.text() == paramName }
+    def node = {
+        'context-param' {
+            'param-name'("${paramName}")
+            'param-value'("${paramValue}")
+        }
+    }
+
+    if (param.isEmpty()) {
+        rootNode.appendNode node
+    } else {
+        param.replaceNode node
+    }
+}
+
+tomcatRunWar.dependsOn addInitParamToWebXml
 
 task esdoc << {
     // 前処理
