--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,7 @@
-database_name=tategaki_editor
-user_name=sampleuser
-password=digk473
-context_path=/home/black-ubuntu/web/tategaki-editor
+#Thu Mar 09 18:07:31 JST 2017
+test-database-user=sampleuser
+test-database-password=digk473
+test-database-name=tategaki_editor
+dbtest-database-user=sampleuser
+dbtest-database-password=digk473
+dbtest-database-name=test
